one case study complete

--- a/references.bib
+++ b/references.bib
@@ -1823,3 +1823,21 @@ keywords = {analysis of variance, anova, f-test, factorial analysis, nonparametr
 location = {Vancouver, BC, Canada},
 series = {CHI '11}
 }
+
+
+@article{martin-understanding-musical-predictions:2020,
+  title = {Understanding Musical Predictions with an Embodied Interface for Musical Machine Learning},
+	abstract = {Machine-learning models of music often exist outside the worlds of musical performance practice and abstracted from the physical gestures of musicians. In this work, we consider how a recurrent neural network (RNN) model of simple music gestures may be integrated into a physical instrument so that predictions are sonically and physically entwined with the performer's actions. We introduce EMPI, an embodied musical prediction interface that simplifies musical interaction and prediction to just one dimension of continuous input and output. The predictive model is a mixture density RNN trained to estimate the performer's next physical input action and the time at which this will occur. Predictions are represented sonically, through synthesised audio, and physically, with a motorised output indicator. We use EMPI to investigate how performers understand and exploit different predictive models to make music through a controlled study of performances with different models and levels of physical feedback. We show that while performers often favour a model trained on human-sourced data, they find different musical affordances in models trained on synthetic, and even random, data. Physical representation of predictions seemed to affect the length of performances. This work contributes new understandings of how musicians use generative ML models in real-time performance backed up by experimental evidence. We argue that a constrained musical interface can expose the affordances of embodied predictive interactions.},
+	author = {Charles Patrick Martin and Kyrre Glette and T{\o}nnes Frostad Nygaard and Jim Torresen},
+	doi = {10.3389/frai.2020.00006},
+	journal = {Frontiers in Artificial Intelligence},
+	keywords = {journal-article, refereed},
+	month = {feb},
+	pages = {6},
+	preprint = {https://metatonetransfer.com/preprints/2020-understanding-musical-predictions-with-EMPI.pdf},
+	title = {Understanding Musical Predictions with an Embodied Interface for Musical Machine Learning},
+	url = {https://www.frontiersin.org/articles/10.3389/frai.2020.00006},
+	video = {https://youtu.be/tvgqxmHr9wU},
+	volume = {3},
+	year = {2020}
+}
