push so far works

--- a/references.bib
+++ b/references.bib
@@ -1841,3 +1841,16 @@ series = {CHI '11}
 	volume = {3},
 	year = {2020}
 }
+@article{lanier1993sound,
+  author  = {Lanier, Jaron},
+  title   = {The Sound of One Hand},
+  journal = {Whole Earth Review},
+  year    = {1993}
+}
+@book{baalman2022composing,
+  title={Composing Interactions: An Artist's Guide to Building Expressive Interactive Systems},
+  author={Baalman, Marije},
+  year={2022},
+  publisher={V2\_Publishing},
+  isbn = {978-90-828935-4-0}
+}
