updating lecture content

--- a/references.bib
+++ b/references.bib
@@ -1854,3 +1854,30 @@ series = {CHI '11}
   publisher={V2\_Publishing},
   isbn = {978-90-828935-4-0}
 }
+@inproceedings{schkolne2001organicshape,
+author = {Schkolne, Steven and Pruett, Michael and Schr\"{o}der, Peter},
+title = {Surface drawing: creating organic 3D shapes with the hand and tangible tools},
+year = {2001},
+isbn = {1581133278},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/365024.365114},
+doi = {10.1145/365024.365114},
+abstract = {Surface Drawing is a system for creating organic 3D shapes in a manner which supports the needs and interests of artists. This medium facilitates the early stages of creative design which many 3D modeling programs neglect. Much like traditional media such as line drawing and painting, Surface Drawing lets users construct shapes through repeated marking. In our case, the hand is used to mark 3D space in a semi-immersive virtual environment. The interface is completed with tangible tools to edit and manipulate models. We introduce the use of tongs to move and scale 3D shapes and demonstrate a magnet tool which is comfortably held without restricting hand motion. We evaluated our system through collaboration with artists and designers, exhibition before hundreds of users, our own extensive exploration of the medium, and an informal user study. Response was especially positive from users with an artistic background.},
+booktitle = {Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
+pages = {261–268},
+numpages = {8},
+keywords = {3D modeling, artistic shape creation, design prototyping, fine art, hand-based interface, repeated marking, semi-immersive environment, tangible user interface},
+location = {Seattle, Washington, USA},
+series = {CHI '01}
+}
+@article{kruger1994workbench,
+  author={Krueger, W. and Froehlich, B.},
+  journal={IEEE Computer Graphics and Applications}, 
+  title={The Responsive Workbench [virtual work environment]}, 
+  year={1994},
+  volume={14},
+  number={3},
+  pages={12-15},
+  keywords={Multimedia systems;Workstations;Virtual reality;Computational modeling;Surgery;Humans;Collaborative work;Watches;Glass;Virtual environment},
+  doi={10.1109/38.279036}}
