--- a/references.bib
+++ b/references.bib
@@ -1880,4 +1880,39 @@ series = {CHI '01}
   number={3},
   pages={12-15},
   keywords={Multimedia systems;Workstations;Virtual reality;Computational modeling;Surgery;Humans;Collaborative work;Watches;Glass;Virtual environment},
-  doi={10.1109/38.279036}}
+  doi={10.1109/38.279036}
+}
+@inproceedings{coda2022chi,
+author = {Fran\c{c}oise, Jules and Fdili Alaoui, Sarah and Candau, Yves},
+title = {CO/DA: Live-Coding Movement-Sound Interactions for Dance Improvisation},
+year = {2022},
+isbn = {9781450391573},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3491102.3501916},
+doi = {10.1145/3491102.3501916},
+abstract = {We present a performance-led inquiry that involved a live coder programming movement-based interactive sound and two dance improvisers. During two years of collaboration, we developed a joint improvisation practice where the interactions between the dancers’ movement and the sound feedback are programmed on the fly through live coding and movement sensing. To that end, we designed a new live coding environment called CO/DA that facilitates the real-time manipulation of continuous streams of the dancers’ motion data for interactive sound synthesis. Through an autoethnographic inquiry, we describe our practice of sound and movement improvisation where live coding dynamically changes how the dancers’ movements generate sound, which in turn influences the dancers’ improvisation. We then discuss the value, potential and challenges of our dance/code improvisation practice, along with its implications as a design method.},
+booktitle = {Proceedings of the 2022 CHI Conference on Human Factors in Computing Systems},
+articleno = {482},
+numpages = {13},
+keywords = {Dance, Design., Embodied Interaction, Improvisation, Live Coding, Movement},
+location = {New Orleans, LA, USA},
+series = {CHI '22}
+}
+@inproceedings{marshall2011chi,
+author = {Marshall, Joe and Rowland, Duncan and Rennick Egglestone, Stefan and Benford, Steve and Walker, Brendan and McAuley, Derek},
+title = {Breath control of amusement rides},
+year = {2011},
+isbn = {9781450302289},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/1978942.1978955},
+doi = {10.1145/1978942.1978955},
+abstract = {Emerging robotic technologies are enabling the control of individual seats on rollercoasters and other thrill rides. We explore the potential of breathing as an effective and engaging way of driving this. Observations and interviews from trials of an enhanced bucking bronco ride show that breath-control is fun, challenging and intelligible, and reveal riders-x tactics as they battled the machine. We conclude that breath control is feasible and appropriate for controlling rides, unpack its important characteristics, and consider how it might be built into future ride systems. We argue that the combination of voluntary and involuntary factors in breathing is especially appealing for controlling rides as it balances game-like elements of skill and learning against the thrill of surrendering control to the machine.},
+booktitle = {Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
+pages = {73–82},
+numpages = {10},
+keywords = {thrill, themepark, bucking bronco, breathing, breath control, biosensing, amusement ride, affective computing},
+location = {Vancouver, BC, Canada},
+series = {CHI '11}
+}
