only have nimey content left; update gitignore to pass macos DS_Store

--- a/references.bib
+++ b/references.bib
@@ -1916,3 +1916,95 @@ keywords = {thrill, themepark, bucking bronco, breathing, breath control, biosen
 location = {Vancouver, BC, Canada},
 series = {CHI '11}
 }
+
+@article{boden1998computational,
+	abstract = {Creativity is a fundamental feature of human intelligence, and a challenge for AI. AI techniques can be used to create new ideas in three ways: by producing novel combinations of familiar ideas; by exploring the potential of conceptual spaces; and by making transformations that enable the generation of previously impossible ideas. AI will have less difficulty in modelling the generation of new ideas than in automating their evaluation.},
+	author = {Margaret A. Boden},
+	doi = {https://doi.org/10.1016/S0004-3702(98)00055-1},
+	issn = {0004-3702},
+	journal = {Artificial Intelligence},
+	note = {Artificial Intelligence 40 years later},
+	number = {1},
+	pages = {347-356},
+	title = {Creativity and artificial intelligence},
+	url = {https://www.sciencedirect.com/science/article/pii/S0004370298000551},
+	volume = {103},
+	year = {1998},
+	bdsk-url-1 = {https://www.sciencedirect.com/science/article/pii/S0004370298000551},
+	bdsk-url-2 = {https://doi.org/10.1016/S0004-3702(98)00055-1}}
+@book{bown2021beyondcreative,
+  title={Beyond the Creative Species: Making Machines That Make Art and Music},
+  author={Bown, Oliver},
+  year={2021},
+  isbn = {9780262045018},
+  url = {https://mitpress.mit.edu/9780262045018/beyond-the-creative-species/},
+  publisher={The MIT Press}
+}
+@inproceedings{lin2020cocreativerobots,
+author = {Lin, Yuyu and Guo, Jiahao and Chen, Yang and Yao, Cheng and Ying, Fangtian},
+title = {It Is Your Turn: Collaborative Ideation With a Co-Creative Robot through Sketch},
+year = {2020},
+isbn = {9781450367080},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3313831.3376258},
+doi = {10.1145/3313831.3376258},
+abstract = {Co-creative systems have been widely explored in the field of computational creativity. However, existing AI partners of these systems are mostly virtual agents. As sketching on paper with embodied robots could be more engaging for designers' early-stage ideation and collaborative practices, we envision the possibility of Cobbie, a mobile robot that ideates iteratively with designers by generating creative and diverse sketches. To evaluate the differences in co-creativity and user experience between the co-creative robots and virtual agents, we conducted a comparative experiment and analyzed the data collected from quantitative scales, observation, and semi-structured interview. The results reveal that Cobbie is more satisfying in motivating exploration, provoking unexpected ideas and engaging designers in the collaborative ideation process. Based on these findings, we discussed the prospects of co-creative robots for future developments of human-AI collaborative systems.},
+booktitle = {Proceedings of the 2020 CHI Conference on Human Factors in Computing Systems},
+pages = {1–14},
+numpages = {14},
+keywords = {co-creative system, creative robot, early-stage design, human-ai collaboration, ideation},
+location = {Honolulu, HI, USA},
+series = {CHI '20}
+}
+@inproceedings{trajkova2023holographicai,
+author = {Trajkova, Milka and Deshpande, Manoj and Knowlton, Andrea and Monden, Cassandra and Long, Duri and Magerko, Brian},
+title = {AI Meets Holographic Pepper’s Ghost: A Co-Creative Public Dance Experience},
+year = {2023},
+isbn = {9781450398985},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3563703.3596658},
+doi = {10.1145/3563703.3596658},
+abstract = {In this demonstration, we present a holographic projected version of LuminAI, which is an interactive art installation that allows participants to collaborate with an AI dance partner by improvising movements together. By utilizing a mix of a top-down and bottom-up approach, we seek to understand embodied co-creativity in an improvisational dance setting to better develop the design of the modular AI agent to creatively collaborate with a dancer. The purpose of this demonstration is to describe the five-module agent design and investigate how we can design an immersive experience that is design-efficient, portable, light, and duo-user participation. Through this installation in an imitated black box space, audience members and dancers engage in an immersive co-creative dance experience, inspiring discussion on the limitless applications of dance and technology in the realms of learning, training, and creativity.},
+booktitle = {Companion Publication of the 2023 ACM Designing Interactive Systems Conference},
+pages = {274–278},
+numpages = {5},
+keywords = {AI agents, co-creative AI, co-creative agents, co-creativity, dance improvisation},
+location = {Pittsburgh, PA, USA},
+series = {DIS '23 Companion}
+}
+@inproceedings{trajkova2024dance,
+author = {Trajkova, Milka and Long, Duri and Deshpande, Manoj and Knowlton, Andrea and Magerko, Brian},
+title = {Exploring Collaborative Movement Improvisation Towards the Design of LuminAI—a Co-Creative AI Dance Partner},
+year = {2024},
+isbn = {9798400703300},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3613904.3642677},
+doi = {10.1145/3613904.3642677},
+abstract = {Co-creation in embodied contexts is central to the human experience but is often lacking in our interactions with computers. We seek to develop a better understanding of embodied human co-creativity to inform the human-centered design of machines that can co-create with us. In this paper, we ask: What characterizes dancers’ experiences of embodied dyadic interaction in movement improvisation? To answer this, we ran focus groups with 24 university dance students and conducted a thematic analysis of their responses. We synthesize our findings in an Interconnected Model of Improvisational Dance Inputs, where movement choices are shaped by the interplay between in-the-moment influences between the self, partner, and the environment, a set of generative strategies, and heuristics for a successful collaboration. We present a set of design recommendations for LuminAI, a co-creative AI dance partner. Our contributions can inform the design of AI in embodied co-creative domains.},
+booktitle = {Proceedings of the 2024 CHI Conference on Human Factors in Computing Systems},
+articleno = {890},
+numpages = {22},
+keywords = {AI agents, co-creative agents, co-creativity, computational creativity, dance improvisation, movement improvisation},
+location = {Honolulu, HI, USA},
+series = {CHI '24}
+}
+@inproceedings{long2019lumi,
+author = {Long, Duri and Jacob, Mikhail and Magerko, Brian},
+title = {Designing Co-Creative AI for Public Spaces},
+year = {2019},
+isbn = {9781450359177},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3325480.3325504},
+doi = {10.1145/3325480.3325504},
+abstract = {Artificial intelligence (AI) is becoming increasingly pervasive in our everyday lives. There are consequently many common misconceptions about what AI is, what it is capable of, and how it works. Compounding the issue, opportunities to learn about AI are often limited to audiences who already have access to and knowledge about technology. Increasing access to AI in public spaces has the potential to broaden public AI literacy, and experiences involving co-creative (i.e. collaboratively creative) AI are particularly well-suited for engaging a broad range of participants. This paper explores how to design co-creative AI for public interaction spaces, drawing both on existing literature and our own experiences designing co-creative AI for public venues. It presents a set of design principles that can aid others in the development of co-creative AI for public spaces as well as guide future research agendas.},
+booktitle = {Proceedings of the 2019 Conference on Creativity and Cognition},
+pages = {271–284},
+numpages = {14},
+keywords = {co-creative ai, collaboration, human-centered ai, public displays, reflection on design processes},
+location = {San Diego, CA, USA},
+series = {C\&C '19}
+}
