--- a/references.bib
+++ b/references.bib
@@ -2008,3 +2008,131 @@ keywords = {co-creative ai, collaboration, human-centered ai, public displays, r
 location = {San Diego, CA, USA},
 series = {C\&C '19}
 }
+@inproceedings{privato2023thales,
+ abstract = {Thales is a composed instrument consisting of two hand-held magnetic controllers whose interactions with each other and with other magnets produce the somatosensory manifestation of a tangible interface that the musician generates and shapes in the act of performing. In this paper we provide a background for the development of Thales by describing the application of permanent magnets in HCI and musical interfaces. We also introduce the instrument’s sound generation based on a neural synthesis model and contextualise the system in relation with the concept of magnetic scores. We report on our preliminary user study and discuss the somatosensory response that characterise Thales, observing the interaction between the opposing magnetic field of the controllers as a tangible magnetic interface. Finally, we investigate its nature from the perspective of performative posthumanist ontologies.},
+ address = {Mexico City, Mexico},
+ articleno = {54},
+ author = {Nicola Privato and Thor Magnusson and Einar Torfi Einarsson},
+ booktitle = {Proceedings of the International Conference on New Interfaces for Musical Expression},
+ doi = {10.5281/zenodo.11189218},
+ editor = {Miguel Ortiz and Adnan Marquez-Borbon},
+ issn = {2220-4806},
+ month = {May},
+ numpages = {7},
+ pages = {387--393},
+ title = {Magnetic Interactions as a Somatosensory Interface},
+ track = {Papers},
+ url = {http://nime.org/proceedings/2023/nime2023_54.pdf},
+ year = {2023}
+}
+@software{martin2018phaserings,
+  author       = {Charles Martin},
+  title        = {PhaseRings},
+  month        = april,
+  year         = 2018,
+  publisher    = {Zenodo},
+  version      = {v1.3},
+  doi          = {https://doi.org/10.5281/zenodo.1237701},
+  note = {[Open-source software repository]},
+}
+@inproceedings{harrison2018guitar,
+ abstract = {The design of traditional musical instruments is a process of incremental refinement over many centuries of innovation. Conversely, digital musical instruments (DMIs), being unconstrained by requirements of efficient acoustic sound production and ergonomics, can take on forms which are more abstract in their relation to the mechanism of control and sound production. In this paper we consider the case of designing DMIs for use in existing musical cultures, and pose questions around the social and technical acceptability of certain design choices relating to global physical form and input modality (sensing strategy and the input gestures that it affords). We designed four guitar-derivative DMIs designed to be suitable to perform a strummed harmonic accompaniment to a folk tune. Each instrument possessed varying degrees of `guitar-likeness', based either on the form and aesthetics of the guitar or the specific mode of interaction. We conducted a study where both non-musicians and guitarists played two versions of the instruments and completed musical tasks with each instrument. The results of this study highlight the complex interaction between global form and input modality when designing for existing musical cultures.},
+ address = {Blacksburg, Virginia, USA},
+ author = {Jacob Harrison and Robert H Jack and Fabio Morreale and Andrew P. McPherson},
+ booktitle = {Proceedings of the International Conference on New Interfaces for Musical Expression},
+ doi = {10.5281/zenodo.1302589},
+ editor = {Luke Dahl, Douglas Bowman, Thomas Martin},
+ isbn = {978-1-949373-99-8},
+ issn = {2220-4806},
+ month = {June},
+ pages = {299--304},
+ publisher = {Virginia Tech},
+ title = {When is a Guitar not a Guitar? Cultural Form, Input Modality and Expertise},
+ url = {http://www.nime.org/proceedings/2018/nime2018_paper0063.pdf},
+ year = {2018}
+}
+@article{desjardins2021firstpersontochi,
+author = {Desjardins, Audrey and Tomico, Oscar and Lucero, Andr\'{e}s and Cecchinato, Marta E. and Neustaedter, Carman},
+title = {Introduction to the Special Issue on First-Person Methods in HCI},
+year = {2021},
+issue_date = {December 2021},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {28},
+number = {6},
+issn = {1073-0516},
+url = {https://doi.org/10.1145/3492342},
+doi = {10.1145/3492342},
+abstract = {In this introduction to the special issue on First-Person Methods in (Human-Computer Interaction) HCI, we present a brief overview of first-person methods, their origin, and their use in Human-Computer Interaction. We also detail the difference between first-person methods, second-person, and third-person methods, as a way to guide the reader when engaging the special issue articles. We articulate our motivation for putting together this special issue: we wanted a collection of works that would allow HCI researchers to develop further, define, and outline practices, techniques and implications of first-person methods. We trace links between the articles in this special issue and conclude with questions and directions for future work in this methodological space: working with boundaries, risk, and accountability.},
+journal = {ACM Trans. Comput.-Hum. Interact.},
+month = dec,
+articleno = {37},
+numpages = {12},
+keywords = {First-person research, first-person methods, autobiographical design, autoethnography, somaesthetics, design research, HCI research}
+}
+@article{magnusson2010designconstrain,
+ ISSN = {01489267, 15315169},
+ URL = {http://www.jstor.org/stable/40962941},
+ author = {Thor Magnusson},
+ journal = {Computer Music Journal},
+ number = {4},
+ pages = {62--73},
+ publisher = {The MIT Press},
+ title = {Designing Constraints: Composing and Performing with Digital Musical Systems},
+ urldate = {2025-03-19},
+ volume = {34},
+ year = {2010}
+}
+@book{mirandawanderley2006dmi,
+author = {Miranda, Eduardo Reck and Wanderley, Marcelo},
+title = {New Digital Musical Instruments: Control And Interaction Beyond the Keyboard (Computer Music and Digital Audio Series)},
+year = {2006},
+isbn = {089579585X},
+publisher = {A-R Editions, Inc.},
+address = {USA}
+}
+@article{wessel2002problems,
+author = {Wessel, David and Wright, Matthew},
+title = {Problems and Prospects for Intimate Musical Control of Computers},
+year = {2002},
+issue_date = {Fall 2002},
+publisher = {MIT Press},
+address = {Cambridge, MA, USA},
+volume = {26},
+number = {3},
+issn = {0148-9267},
+url = {https://doi.org/10.1162/014892602320582945},
+doi = {10.1162/014892602320582945},
+journal = {Comput. Music J.},
+month = sep,
+pages = {11–22},
+numpages = {12}
+}
+@article{mcpherson2024mappingnew,
+	abstract = { This article provides historical context for the emergence of `mapping' as a key conceptual metaphor in the context of digital musical instrument (DMI) design and use. In addition to a consideration of different technical implementations, we offer a critical assessment of the tendency to over-generalise mapping as a universal model for both building instruments and analysing them in retrospect. This reification of mapping as a design model, as well as of the dimension spaces of sound and gesture being mapped, is read through a media-theoretical lens, drawing on recent work from interface studies to show how mapping actively constructs ideological relationships between performers and underlying systems of musical representation. While acknowledging the practical utility of traditional formulations of mapping in DMIs, we focus on issues arising from their over-generalisation, including the sometimes-misleading impression of representational stability, the suitability of spatial metaphors, and the assumption of unidirectionality and temporal stasis. In closing, the article explores alternatives based on a relational approach to mapping as an `intra-active' process that is bidirectional at every step, fluid in its distinction of categories, and more dynamic across its variegated temporalities. },
+	author = {Andrew McPherson and Landon Morrison and Matthew Davison and Marcelo M. Wanderley},
+	doi = {10.1080/09298215.2024.2442356},
+	eprint = {https://doi.org/10.1080/09298215.2024.2442356},
+	journal = {Journal of New Music Research},
+	number = {1-2},
+	pages = {110--125},
+	publisher = {Routledge},
+	title = {On mapping as a technoscientific practice in digital musical instruments},
+	url = {https://doi.org/10.1080/09298215.2024.2442356},
+	volume = {53},
+	year = {2024},
+	bdsk-url-1 = {https://doi.org/10.1080/09298215.2024.2442356}}
+  @inproceedings{pigrem2018we,
+  author = {Pigrem, Jon and McPherson, Andrew P.},
+  title = {Do We Speak Sensor? Cultural Constraints of Embodied Interaction },
+  pages = {382--385},
+  booktitle = {Proceedings of the International Conference on New Interfaces for Musical Expression},
+  editor = {Luke Dahl, Douglas Bowman, Thomas Martin},
+  year = {2018},
+  month = jun,
+  publisher = {Virginia Tech},
+  address = {Blacksburg, Virginia, USA},
+  isbn = {978-1-949373-99-8},
+  issn = {2220-4806},
+  doi = {10.5281/zenodo.1302633}
+}
