updates to lecture 11

--- a/references.bib
+++ b/references.bib
@@ -2122,7 +2122,8 @@ numpages = {12}
 	volume = {53},
 	year = {2024},
 	bdsk-url-1 = {https://doi.org/10.1080/09298215.2024.2442356}}
-  @inproceedings{pigrem2018we,
+
+@inproceedings{pigrem2018we,
   author = {Pigrem, Jon and McPherson, Andrew P.},
   title = {Do We Speak Sensor? Cultural Constraints of Embodied Interaction },
   pages = {382--385},
@@ -2135,4 +2136,117 @@ numpages = {12}
   isbn = {978-1-949373-99-8},
   issn = {2220-4806},
   doi = {10.5281/zenodo.1302633}
+}
+
+@inproceedings{tanaka-mapping-out-instruments:2010,
+ abstract = {This paper reviews and extends questions of the scope of an interactive musical instrument and mapping strategies for expressive performance. We apply notions of embodiment and affordance to characterize gestural instruments. We note that the democratization of sensor technology in consumer devices has extended the cultural contexts for interaction. We revisit questions of mapping drawing upon the theory of affordances to consider mapping and instrument together. This is applied to recent work by the author and his collaborators in the development of instruments based on mobile devices designed for specific performance situations.},
+ address = {Sydney, Australia},
+ author = {Tanaka, Atau},
+ booktitle = {Proceedings of the International Conference on New Interfaces for Musical Expression},
+ doi = {10.5281/zenodo.1177903},
+ issn = {2220-4806},
+ keywords = {Musical affordance, NIME, mapping, instrument definition, mobile, multimodal interaction.},
+ pages = {88--93},
+ title = {Mapping Out Instruments, Affordances, and Mobiles},
+ url = {http://www.nime.org/proceedings/2010/nime2010_088.pdf},
+ year = {2010}
+}
+
+@book{edmonds-art-of-interaction:2018,
+  author =       {Ernest Edmonds},
+  doi =          {10.2200/S00825ED1V01Y201802HCI039},
+  publisher =    {Morgan & Claypool Publishers},
+  series =       {Synthesis Lectures on Human-Centered Informatics},
+  title =        {The Art of Interaction: What HCI Can Learn from
+                  Interactive Art},
+  year =         2018
+}
+
+@book{candy_evaluating-new-art:2014,
+  author =       {Linda Candy and Sam Ferguson},
+  editor =       {Linda Candy and Sam Ferguson},
+  publisher =    {Springer International Publishing},
+  series =       {Springer Series on Cultural Computing},
+  title =        {Interactive Experience in the Digital Age:
+                  Evaluating New Art Practice},
+  doi =          {10.1007/978-3-319-04510-8},
+  year =         2014
+}
+
+@article{shneiderman-creativity-support-tools:2007,
+author = {Shneiderman, Ben},
+title = {Creativity support tools: accelerating discovery and innovation},
+year = {2007},
+issue_date = {December 2007},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {50},
+number = {12},
+issn = {0001-0782},
+url = {https://doi.org/10.1145/1323688.1323689},
+doi = {10.1145/1323688.1323689},
+abstract = {How can designers of programming interfaces, interactive tools, and rich social environments enable more people to be more creative more often?},
+journal = {Commun. ACM},
+month = dec,
+pages = {20–32},
+numpages = {13}
+}
+
+@article{shneiderman-csts-report:2006,
+  author =       {Ben Shneiderman and Gerhard Fischer and Mary
+                  Czerwinski and Mitch Resnick and Brad Myers and
+                  Linda Candy and Ernest Edmonds and Mike Eisenberg
+                  and Elisa Giaccardi and Tom Hewett and Pamela
+                  Jennings and Bill Kules and Kumiyo Nakakoji and Jay
+                  Nunamaker and Randy Pausch and Ted Selker and
+                  Elisabeth Sylvan and Michael Terry},
+  doi =          {10.1207/s15327590ijhc2002_1},
+  journal =      {International Journal of Human-Computer Interaction},
+  number =       2,
+  pages =        {61--77},
+  title =        {Creativity Support Tools: Report From a U.S.
+                  National Science Foundation Sponsored Workshop},
+  volume =       20,
+  year =         2006
+}
+
+@article{jeon-rituals-magic:2019,
+  author =       {Myounghoon Jeon and Rebecca Fiebrink and Ernest A.
+                  Edmonds and Damith Herath},
+  doi =          {https://doi.org/10.1016/j.ijhcs.2019.06.005},
+  journal =      {International Journal of Human-Computer Studies},
+  pages =        {108-119},
+  title =        {From rituals to magic: Interactive art and HCI of
+                  the past, present, and future},
+  volume =       131,
+  year =         2019
+}
+
+@article{edmons-art-of-interaction:2010,
+  author =       {Ernest Edmonds},
+  doi =          {10.1080/14626268.2010.556347},
+  journal =      {Digital Creativity},
+  number =       4,
+  pages =        {257-264},
+  title =        {The art of interaction},
+  volume =       21,
+  year =         2010
+}
+
+@article{buxton-artists-luthier:1997,
+author = {Buxton, Bill},
+title = {Artists and the art of the luthier},
+year = {1997},
+issue_date = {Feb. 1997},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {31},
+number = {1},
+issn = {0097-8930},
+url = {https://doi.org/10.1145/248307.248315},
+doi = {10.1145/248307.248315},
+journal = {SIGGRAPH Comput. Graph.},
+month = feb,
+pages = {10–11},
+numpages = {2}
 }
