--- a/references.bib
+++ b/references.bib
@@ -1125,6 +1125,37 @@
   location  = {Toronto, Ontario, Canada},
   series    = {CHI '14}
 }
+
+@inproceedings{martin-tracking-ensemble-performance:2015,
+	abstract = {We present and evaluate a novel interface for
+                  tracking ensemble performances on touch-screens. The
+                  system uses a Random Forest classifier to extract
+                  touch-screen gestures and transition matrix
+                  statistics. It analyses the resulting gesture-state
+                  sequences across an ensemble of performers. A series
+                  of specially designed iPad apps respond to this
+                  real-time analysis of free-form gestural
+                  performances with calculated modifications to their
+                  musical interfaces. We describe our system and
+                  evaluate it through cross-validation and profiling
+                  as well as concert experience.},
+	address = {Baton Rouge, Louisiana, USA},
+	archiveprefix = {arXiv},
+	author = {Charles Martin and Henry Gardner and Ben Swift},
+	booktitle = {Proceedings of the International Conference on New Interfaces for Musical Expression},
+	doi = {10.5281/zenodo.1179130},
+	editor = {Edgar Berdahl and Jesse Allison},
+	eprint = {2012.00296},
+	keywords = {conference-paper, refereed},
+	month = may,
+	pages = {359--364},
+	preprint = {https://metatonetransfer.com/preprints/2015-NIME-TrackingEnsemblePerformance.pdf},
+	publisher = {Louisiana State University},
+	title = {Tracking Ensemble Performance on Touch-Screens with Gesture Classification and Transition Matrices},
+	url = {http://www.nime.org/proceedings/2015/nime2015_242.pdf},
+	year = {2015}}
+
+
 % yichen has a different reference style.
 @inproceedings{martin-intelligent-agents:2016,
   author    = {Martin, Charles and Gardner, Henry and Swift, Ben and Martin, Michael},
@@ -2025,6 +2056,7 @@ series = {C\&C '19}
  url = {http://nime.org/proceedings/2023/nime2023_54.pdf},
  year = {2023}
 }
+
 @software{martin2018phaserings,
   author       = {Charles Martin},
   title        = {PhaseRings},
@@ -2035,6 +2067,7 @@ series = {C\&C '19}
   doi          = {https://doi.org/10.5281/zenodo.1237701},
   note = {[Open-source software repository]},
 }
+
 @inproceedings{harrison2018guitar,
  abstract = {The design of traditional musical instruments is a process of incremental refinement over many centuries of innovation. Conversely, digital musical instruments (DMIs), being unconstrained by requirements of efficient acoustic sound production and ergonomics, can take on forms which are more abstract in their relation to the mechanism of control and sound production. In this paper we consider the case of designing DMIs for use in existing musical cultures, and pose questions around the social and technical acceptability of certain design choices relating to global physical form and input modality (sensing strategy and the input gestures that it affords). We designed four guitar-derivative DMIs designed to be suitable to perform a strummed harmonic accompaniment to a folk tune. Each instrument possessed varying degrees of `guitar-likeness', based either on the form and aesthetics of the guitar or the specific mode of interaction. We conducted a study where both non-musicians and guitarists played two versions of the instruments and completed musical tasks with each instrument. The results of this study highlight the complex interaction between global form and input modality when designing for existing musical cultures.},
  address = {Blacksburg, Virginia, USA},
@@ -2051,6 +2084,7 @@ series = {C\&C '19}
  url = {http://www.nime.org/proceedings/2018/nime2018_paper0063.pdf},
  year = {2018}
 }
+
 @article{desjardins2021firstpersontochi,
 author = {Desjardins, Audrey and Tomico, Oscar and Lucero, Andr\'{e}s and Cecchinato, Marta E. and Neustaedter, Carman},
 title = {Introduction to the Special Issue on First-Person Methods in HCI},
@@ -2070,6 +2104,7 @@ articleno = {37},
 numpages = {12},
 keywords = {First-person research, first-person methods, autobiographical design, autoethnography, somaesthetics, design research, HCI research}
 }
+
 @article{magnusson2010designconstrain,
  ISSN = {01489267, 15315169},
  URL = {http://www.jstor.org/stable/40962941},
@@ -2083,6 +2118,7 @@ keywords = {First-person research, first-person methods, autobiographical design
  volume = {34},
  year = {2010}
 }
+
 @book{mirandawanderley2006dmi,
 author = {Miranda, Eduardo Reck and Wanderley, Marcelo},
 title = {New Digital Musical Instruments: Control And Interaction Beyond the Keyboard (Computer Music and Digital Audio Series)},
@@ -2091,6 +2127,7 @@ isbn = {089579585X},
 publisher = {A-R Editions, Inc.},
 address = {USA}
 }
+
 @article{wessel2002problems,
 author = {Wessel, David and Wright, Matthew},
 title = {Problems and Prospects for Intimate Musical Control of Computers},
@@ -2249,4 +2286,51 @@ journal = {SIGGRAPH Comput. Graph.},
 month = feb,
 pages = {10–11},
 numpages = {2}
+}
+
+
+@article{martin-tiny-touchscreen:2020,
+	archiveprefix = {arXiv},
+	author = {Charles Patrick Martin and Jim Torresen},
+	doi = {10.1162/COMJ_a_00536},
+	eprint = {1902.00680},
+	journal = {Computer Music Journal},
+	number = {4},
+	pages = {41--57},
+	preprint = {https://metatonetransfer.com/preprints/2019-DataDrivenAnalysisMicroJam.pdf},
+	title = {Data Driven Analysis of Tiny Touchscreen Performance with MicroJam},
+	url = {https://arxiv.org/abs/1902.00680},
+	video = {https://youtu.be/HhI47-XzrtI},
+	volume = {43},
+	year = 2020}
+
+
+@inproceedings{martin-phaserings:2016,
+	author = {Charles P. Martin},
+	booktitle = {Musical Program of the International Conference on Auditory Display},
+	month = jul,
+	pages = {232--233},
+	preprint = {https://metatonetransfer.com/preprints/2016-ICAD-PhaseRings.pdf},
+	title = {PhaseRings for iPad Ensemble and Ensemble Director Agent},
+	type = {Musical Performance},
+	url = {http://www.icad.org/icad2016/proceedings/concert/ICAD2016_paper_99.pdf},
+	video = {https://youtu.be/aDEQMLwd8ok},
+	year = 2016,
+	bdsk-url-1 = {https://metatonetransfer.com/preprints/2016-ICAD-PhaseRings.pdf}}
+
+@inproceedings{kleinberger-phoxears:2015,
+ abstract = {The Electronic Fox Ears helmet is a listening device that changes its wearer's experience of hearing. A pair of head-mounted, independently articulated parabolic microphones and built-in bone conduction transducers allow the wearer to sharply direct their attention to faraway sound sources. Joysticks in each hand control the orientations of the microphones, which are mounted on servo gimbals for precise targeting. Paired with a mobile device, the helmet can function as a specialized, wearable field recording platform. Field recording and ambient sound have long been a part of electronic music; our device extends these practices by drawing on a tradition of wearable technologies and prosthetic art that blur the boundaries of human perception. },
+ address = {Baton Rouge, Louisiana, USA},
+ author = {Rebecca Kleinberger and Gershon Dublon and {Joseph A.} Paradiso and Tod Machover},
+ booktitle = {Proceedings of the International Conference on New Interfaces for Musical Expression},
+ doi = {10.5281/zenodo.1179106},
+ editor = {Edgar Berdahl and Jesse Allison},
+ issn = {2220-4806},
+ month = {May},
+ pages = {30--31},
+ publisher = {Louisiana State University},
+ title = {PHOX Ears: A Parabolic, Head-mounted, Orientable, eXtrasensory Listening Device},
+ url = {http://www.nime.org/proceedings/2015/nime2015_165.pdf},
+ urlsuppl1 = {http://www.nime.org/proceedings/2015/165/0165-file1.mp4},
+ year = {2015}
 }
