--- a/references.bib
+++ b/references.bib
@@ -2334,3 +2334,50 @@ numpages = {2}
  urlsuppl1 = {http://www.nime.org/proceedings/2015/165/0165-file1.mp4},
  year = {2015}
 }
+@article{martin1933myth,
+author = {Martin, C. Dianne},
+title = {The myth of the awesome thinking machine},
+year = {1993},
+issue_date = {April 1993},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {36},
+number = {4},
+issn = {0001-0782},
+url = {https://doi.org/10.1145/255950.153587},
+doi = {10.1145/255950.153587},
+journal = {Commun. ACM},
+month = apr,
+pages = {120–133},
+numpages = {14},
+keywords = {ABC computer, ENIAC, MARK I, Univac, attitudes about computers, computer history}
+}
+@article{turing1950computing,
+  title={Computing machinery and intelligence (1950)},
+  author={Turing, Alan M},
+  journal={Mind},
+  volume={49},
+  pages={433--460},
+  year={1950}
+}
+@book{natale2021deceitful,
+  title={Deceitful media: Artificial intelligence and social life after the Turing test},
+  author={Natale, Simone},
+  year={2021},
+  publisher={Oxford University Press}
+}
+@article{licklider1960man,
+  title={Man-computer symbiosis},
+  author={Licklider, Joseph CR},
+  journal={IRE transactions on human factors in electronics},
+  number={1},
+  pages={4--11},
+  year={1960},
+  publisher={IEEE}
+}
+@misc{rusdaniela2020,
+  author = {Toews, Rob},
+  howpublished = {https://www.forbes.com/sites/robtoews/2020/12/13/8-leading-women-in-the-field-of-ai/},
+  title = {Leading Women in the Field of AI. Forbes},
+  year = {2020}
+}
